Fixing shadow on mobile

--- a/ArticleTemplates/css/scss/partials/_discussion.scss
+++ b/ArticleTemplates/css/scss/partials/_discussion.scss
@@ -7,7 +7,6 @@
 	@include padding(1);
 	overflow: hidden;
 	@include mq($to: col1) {
-		margin: $base-1 / 1.5 $base-1 / 1.5 0 $base-1 / 1.5;
 		display: block;
 	}
 	@include mq($from: col2) {
@@ -146,6 +145,7 @@
 		}
 		.discussion__report {
 			float: right;
+			margin-top: 3px;
 			.touchpoint__label {
 				font-weight: normal;
 			}
@@ -285,6 +285,9 @@
 // Expanding Logic
 .discussion__thread {
 	border-bottom: 2px solid $shadow;
+	@include mq($to: col1) {
+		@include margin(1);
+	}
 
 	.discussion:nth-of-type(n+5) {
 		display: none;
